Revert "okay guys i fixed. added corner resizing. east and west is working in js. also z-indexed the taskbar"
This reverts commit e4422c22e3a29004c77127b233dae1fec484cdaa.

--- a/css/style.css
+++ b/css/style.css
@@ -75,8 +75,6 @@ footer {
      width:100%;
      position:absolute;
      bottom:0;
-
-     z-index: 1;
 }
 #start:hover{
      filter: brightness(107.5%);
